--- a/lbtMobile/css/index.css
+++ b/lbtMobile/css/index.css
@@ -293,6 +293,13 @@
 .sort-cont ul li p img{
     width: 100%;
     height: 100%;
+    -webkit-filter: grayscale(100%);   
+  -moz-filter: grayscale(100%);  
+   -ms-filter: grayscale(100%);   
+  -o-filter: grayscale(100%);     
+     filter: grayscale(100%);        
+ 
+filter: gray;
 }
 
 /*主营业务*/
